<resources>
    <string name="app_name">Note Pro</string>
    <string name="hello">Hello.</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_btn">Login</string>
</resources>