<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/signIn_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/signin_icon" />

    <LinearLayout

        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn_icon"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_marginVertical="32dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signIn_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundeditext"
            android:text="@string/create_account" />
        <ProgressBar
            android:id="@+id/signIn_progress_bar"
            android:layout_marginTop="15dp"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/login_Text_view_btn"
            android:text="@string/login_btn"/>

    </LinearLayout>
</RelativeLayout>